syntax = "proto3";
package proto;

import "google/api/annotations.proto";

service HodDB {
    rpc Select(SelectQuery) returns (Response) {
        option (google.api.http) = {
          post: "/v1/hoddb/select"
          body: "*"
        };
    };
    rpc Parse(ParseRequest) returns (SelectQuery);
    rpc Count(SelectQuery) returns (Response);
    rpc Versions(VersionQuery) returns (Response);
}

enum TimeFilter {
    At = 0;
    Before = 1;
    After = 2;
}

enum Pattern {
    Single = 0;
    ZeroOne = 1;
    ZeroPlus = 2;
    OnePlus = 3;
}

message ParseRequest {
    string query = 1;
}

message Response {
    string error = 1;
    int64 version = 2;
    int64 count = 3;
    repeated string variables = 4;
    repeated Row rows = 5;
}

message URI {
    // full URI
    string namespace = 1;
    string value = 2;

    // variable
    string variable = 3;
    Pattern pattern = 4;
}

message Triple {
    URI subject = 1;
    repeated URI predicate = 2; // can have more than 1 predicate for queries
    URI object = 3;
}

message SelectQuery {
    // list of vars to select, including '*'
    repeated string vars = 1;
    // list of graphs to select, including '*'
    repeated string graphs = 2;
    // time filter
    TimeFilter filter = 3;
    int64 timestamp = 4;
    //where clause
    repeated Triple where = 5;
}

message InsertQuery {
    // insert terms
    repeated Triple insert = 1;
    // list of graphs to insert into, including '*'
    repeated string graphs = 2;
    //where clause
    repeated Triple where = 3;
    // whether or not to wait for flush to disk
    bool blocking = 4;
}

message VersionQuery {
    TimeFilter filter = 1;
    int64 timestamp = 4;
    repeated string graphs = 2;
    int64 limit = 3;
}

message Entity {
    bytes EntityKey  = 1;
    
    // for nodes
    message Edge {
        bytes Predicate = 1;
        bytes Value = 2;
        Pattern Pattern = 3;
    }
    // handles 1-hop and + and * 
    repeated Edge in = 2;
    repeated Edge out = 3;

    // for edges
    message Endpoints {
        bytes Src = 1;
        bytes Dst = 2;
    }
    repeated Endpoints endpoints = 4;
}

message Row {
    repeated URI values = 1;
}
